# l8bin

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  README.md  docker-compose.yml  install-windows.ps1  install.sh  release.toml
.github/workflows/: deploy-landing.yml  release.yml
agent/: Cargo.toml  Dockerfile
agent/src/: activity.rs  config.rs  lib.rs  main.rs  tls.rs
agent/src/routes/: caddy.rs  containers.rs  health.rs  images.rs  mod.rs  project_meta.rs  register.rs  volumes.rs  waker.rs
agent/src/routes/containers/: batch_run.rs  env.rs  lifecycle.rs  metadata.rs  mod.rs  scan.rs  stats.rs  types.rs
agent/src/routes/waker/: caddy.rs  mod.rs  multi_service.rs  wake.rs
cli/: Cargo.toml
cli/src/: auth.rs  build.rs  ci.rs  config.rs  deploy.rs  main.rs  mise.rs  railpack.rs  ship.rs  status.rs  upload.rs
compose-bollard/: Cargo.toml
compose-bollard/src/: compat.rs  error.rs  interpolate.rs  lib.rs  mapping.rs  parse.rs  validate.rs
dashboard/: Dockerfile  Dockerfile.runtime  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  api.ts  hooks.ts  index.css  main.tsx
docs/: api-reference.md  architecture.md  cli.md  configuration.md  decisions.md  development.md  env-secrets.md  failure-model.md  faq.md  janitor.md  llms.txt  local-testing.md  multi-server.md  multi-service.md  release.md  security.md  todo.md  user-flows.md  volumes.md  waker.md
docs/examples/: Dockerfile  docker-compose.yaml
docs/planning/: access-control.md  auto-update.md  backup.md  compose-bollard-crate.md  disaster-recovery.md  error-types.md  migration.md  multi-service-plan.md  multi-service.md  mvp-plan.md  notifications.md  post-mvp-plan.md  pre-mvp-plan.md  project-backup.md  roadmap.md  security-hardening.md  template-catalog.md
landing/: .gitignore  Dockerfile  index.html  logo.html  nginx.conf  package.json  pnpm-lock.yaml  quickstart.html  vite.config.js
landing/docs/: index.html
landing/live/: index.html
landing/src/: main.js  quickstart.css  quickstart.js  style.css
litebin-common/: Cargo.toml
litebin-common/src/: caddy.rs  capabilities.rs  cloudflare.rs  compose_run.rs  docker.rs  heartbeat.rs  lib.rs  net.rs  proxy.rs  routing.rs  scan.rs  sys.rs  types.rs  waker_pages.rs
litebin-common/src/docker/: container.rs  image.rs  mod.rs  scan.rs  tests.rs
orchestrator/: Cargo.toml  Dockerfile
orchestrator/proptest-regressions/nodes/: selector.txt
orchestrator/proptest-regressions/tests/: janitor_tests.txt
orchestrator/src/: activity.rs  capabilities.rs  cli.rs  cloudflare_router.rs  config.rs  main.rs  openapi.rs  routing_helpers.rs  status.rs  validation.rs
orchestrator/src/auth/: backend.rs  mod.rs
orchestrator/src/db/: mod.rs  models.rs
orchestrator/src/db/migrations/: 0001_initial.sql  0002_add_nodes.sql  0003_add_timeout_settings.sql  0004_add_cmd.sql  0005_add_settings_and_resource_limits.sql  0006_deploy_tokens_global.sql  0007_project_nullable_deploy.sql  0008_custom_domain.sql  0009_custom_domain_index.sql  0010_project_name_description.sql  0011_nodes_public_ip.sql  0012_nodes_agent_secret.sql  0013_nodes_load_stats.sql  0014_nodes_disk_total.sql  0015_volume_persistence.sql  0016_custom_routes.sql  0017_multi_service.sql  0018_status_trigger.sql  0019_nodes_architecture.sql  0020_allow_raw_ports.sql  0021_allow_docker_access.sql  0022_deploy_type.sql  0023_oneshot_services.sql  0024_pending_project_status.sql  0025_project_capabilities.sql  0026_background_projects.sql  0027_reset_legacy_docker_access.sql
orchestrator/src/nodes/: client.rs  heartbeat.rs  mod.rs  reconciliation.rs  selector.rs
orchestrator/src/routes/: auth.rs  caddy.rs  capabilities.rs  deploy.rs  deploy_tokens.rs  docs.rs  global_settings.rs  health.rs  heartbeat.rs  images.rs  manage.rs  mod.rs  nodes.rs  openapi.rs  projects.rs  scan.rs  settings.rs  stats.rs  volumes.rs  wake_report.rs  waker.rs
orchestrator/src/routes/deploy/: compose.rs  logs.rs  mod.rs  single.rs
orchestrator/src/routes/manage/: handlers.rs  helpers.rs  mod.rs  multi_service.rs
orchestrator/src/routes/waker/: handler.rs  helpers.rs  mod.rs
orchestrator/src/sleep/: janitor.rs  mod.rs
orchestrator/src/tests/: auth_tests.rs  deploy_stage_tests.rs  health_tests.rs  helpers.rs  janitor_tests.rs  mod.rs  nodes_tests.rs  orchestrator_path_tests.rs  projects_tests.rs  waker_tests.rs
setup/: build.ps1  build.sh  generate-certs.sh  prepare-local-release.sh  setup-node.sh
(+138 files in other folders)
