[package]
name = "litebin-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "litebin-agent"
path = "src/main.rs"

[dependencies]
# Shared common crate
litebin-common = { path = "../litebin-common" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.51", features = ["full"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2.0"

# System info
sysinfo = "0.33"

# Docker
bollard = "0.20"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
anyhow = "1.0"

# HTTP client (for wake report to orchestrator)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HMAC signing for wake report
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

# Node client pool (for wake locks)
dashmap = "6"

[dev-dependencies]
proptest = "1.0"
