[package]
name = "l8b"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "l8b"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "process", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
rpassword = "7"
tokio-util = { version = "0.7", features = ["io", "compat"] }
indicatif = "0.17"
toml = "0.8"
http-body-util = "0.1"
bytes = "1"
async-stream = "0.3"
futures-core = "0.3"
dialoguer = "0.11"
colored = "3"
flate2 = "1"
