[package]
name = "litebin-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
bollard = "0.20"
futures-util = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.51", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
shlex = "1"
sysinfo = "0.33"
compose-bollard = { path = "../compose-bollard" }

[dev-dependencies]
proptest = "1"
