[package]
name = "litebin-orchestrator"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# Shared common crate
litebin-common = { path = "../litebin-common" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"
tokio = { version = "1.51", features = ["full"] }

# Docker
bollard = "0.20"
futures-util = "0.3"
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for Caddy Admin API + mTLS node clients)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Node client pool
dashmap = "6"

# TLS cert parsing
rustls-pemfile = "2"

# Misc
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"

# Authentication
axum-login = "0.18"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
bcrypt = "0.19"
rand = "0.10"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
proptest = "1"
axum-test = "17"
tower = { version = "0.5", features = ["util"] }
serde_json = "1.0"
